tests/paczka1/fuzzy1/59468148.err
Error in line 2: YQ3W A873 1,9
Error in line 33: ERUHP0Edk A873 -1,0
Error in line 21: SX0iAq0nAJ A873 17,9
